// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for onboarding 1`] = `
<Connect(SelectStepScreen)
  contactStageId={4}
  createStepTracking={
    Object {
      "level3": "steps",
      "level4": undefined,
      "name": "onboarding : self : steps : create",
      "section": "onboarding",
      "subsection": "self",
    }
  }
  headerText={
    Array [
      "How do you want to move",
      "forward on your spiritual journey?",
    ]
  }
  next={[MockFunction]}
  receiverId="1234"
/>
`;

exports[`renders correctly with back button 1`] = `
<Connect(SelectStepScreen)
  contactStageId={4}
  createStepTracking={
    Object {
      "level3": "steps",
      "level4": undefined,
      "name": "people : self : steps : create",
      "section": "people",
      "subsection": "self",
    }
  }
  headerText={
    Array [
      "How do you want to move",
      "forward on your spiritual journey?",
    ]
  }
  next={[MockFunction]}
  receiverId="1234"
/>
`;

exports[`renders correctly without back button 1`] = `
<Connect(SelectStepScreen)
  contactStageId={4}
  createStepTracking={
    Object {
      "level3": "steps",
      "level4": undefined,
      "name": "people : self : steps : create",
      "section": "people",
      "subsection": "self",
    }
  }
  headerText={
    Array [
      "How do you want to move",
      "forward on your spiritual journey?",
    ]
  }
  next={[MockFunction]}
  receiverId="1234"
/>
`;
